add privacy and unsubscribe update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-We aren't jerks. We won't share your email with anyone else.
+<html>
+<header>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+</header>
+
+<body style="background-color: #fff">
+<div class="container-fluid py-3" style="margin-top: 100px">
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <h3 class="text-center mb-4" style="font-family: 'Roboto', sans-serif;">We aren't jerks. We won't share your email with anyone else.</h3>
+        </div>
+    </div>
+</div>
+</body>
+</html>
+
