--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -8,7 +8,7 @@
 <div class="container-fluid py-3" style="margin-top: 100px">
     <div class="row">
         <div class="col-md-6 mx-auto">
-                <div class="card card-body">
+                <div class="shadow card card-body">
                     <h3 class="text-center mb-4" style="font-family: 'Roboto', sans-serif;">Unsubscribe</h3>
                     <form>
                         <div class="form-group has-error">
